--- a/W05D03/intro-to-react/package.json
+++ b/W05D03/intro-to-react/package.json
@@ -22,5 +22,9 @@
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1"
   }
 }
