--- a/W07D01/revision-lab/package.json
+++ b/W07D01/revision-lab/package.json
@@ -5,22 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --mode=development",
+    "serve": "webpack-dev-server --mode=development"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "@babel/preset-env": "^7.2.3",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
+    "bulma": "^0.7.5",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-react": "^7.6.3",
+    "babel-install": "2.1.0"
   }
 }
