--- a/basic-react-webpack-setup/package.json
+++ b/basic-react-webpack-setup/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve:back": "nodemon index.js",
-    "serve:front": "webpack-dev-server --mode-development",
-    "seed": "node db/seeds.js"
+    "serve": "webpack-dev-server --mode=development"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +13,6 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-install": "2.1.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -27,15 +24,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.1",
-    "mongoose-unique-validator": "^2.0.3",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-dom": "^16.7.0"
   }
 }
