--- a/animal-kingdom/package.json
+++ b/animal-kingdom/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/**/*_spec.js --require test/helper --recursive --exit",
     "serve:back": "nodemon index.js",
     "serve:front": "webpack-dev-server --mode-development",
     "seed": "node db/seeds.js"
@@ -17,11 +17,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-install": "2.1.0",
     "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.2.2",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "supertest": "^4.0.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
